--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,3 @@
-aiohttp==3.5.4
-altgraph==0.16.1
-async-timeout==3.0.1
-attrs==19.3.0
-auto-py-to-exe==2.6.5
-bottle==0.12.17
-bottle-websocket==0.2.9
-certifi==2019.9.11
-cffi==1.12.3
-chardet==3.0.4
 discord.py==1.2.5
-Django==2.2.4
-Eel==0.10.4
-future==0.17.1
-gevent==1.4.0
-gevent-websocket==0.10.1
-greenlet==0.4.15
-idna==2.8
-multidict==4.7.1
-pefile==2019.4.18
-pycparser==2.19
-pygame==1.9.6
-PyInstaller==3.5
+discord==1.0.1
 python-dotenv==0.10.3
-pytz==2019.2
-pywin32-ctypes==0.2.0
-requests==2.22.0
-six==1.13.0
-sqlparse==0.3.0
-urllib3==1.25.7
-vk-api==11.6.0
-websockets==6.0
-whichcraft==0.6.0
-yarl==1.4.2
